objects/DOZISF__ZoomInfo_Scoop__c.object
<CustomObject>
    <fields>
        <fullName>DOZISF__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ZoomInfo Scoops</relationshipLabel>
        <relationshipName>ZoomInfo_Scoops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ZoomInfo Scoops</relationshipLabel>
        <relationshipName>ZoomInfo_Scoops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOZISF__Date_Published__c</fullName>
        <label>Date Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOZISF__Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>ZoomInfo Scoops</relationshipLabel>
        <relationshipName>ZoomInfo_Scoops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOZISF__Scoop_ID__c</fullName>
        <label>Scoop ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Topics__c</fullName>
        <label>Topics</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ZoomInfo External Id</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ZoomInfo Scoop</label>
    <listViews>
        <fullName>DOZISF__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>DOZISF__Account__c</columns>
        <columns>DOZISF__Lead__c</columns>
        <columns>DOZISF__Type__c</columns>
        <columns>DOZISF__Topics__c</columns>
        <columns>DOZISF__Description__c</columns>
        <columns>DOZISF__Date_Published__c</columns>
        <columns>DOZISF__Scoop_ID__c</columns>
        <columns>DOZISF__ZoomInfo_External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>ZoomInfo Scoop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZoomInfo Scoops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>